--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-maps": "0.31.1"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
